--- a/BVCAutoservice/Resources/en.lproj/Localizable.strings
+++ b/BVCAutoservice/Resources/en.lproj/Localizable.strings
@@ -5,3 +5,12 @@
   Created by Петр Постников on 03.11.2022.
   
 */
+
+// MARK: Общие
+"common.logo-title" = "AutoService";
+"common.enter" = "Enter";
+
+// MARK: Авторизация выборка
+"auth-choice.button-user.title" = "Looking for a AutoService";
+"auth-choice.button-service.title" = "Offer AutoService";
+"auth-choice.labelAuth" = "Already have an account?";
