--- a/BVCAutoservice/Resources/ru.lproj/Localizable.strings
+++ b/BVCAutoservice/Resources/ru.lproj/Localizable.strings
@@ -10,6 +10,7 @@
 "common.logo-title" = "АвтоСервис";
 "common.enter" = "Войти";
 "common.next" = "Далее";
+"common.next-points" = "Далее...";
 "common.registration" = "Регистрация";
 "common.authorization" = "Авторизация";
 "common.error-message" = "Произошла ошибка";
@@ -54,3 +55,9 @@
 "welcome-common.describe-regitration" = "Регистрация успешно завершена";
 "welcome-common.describe-recovery" = "Ваш аккаунт успешно восстановлен";
 "welcome-common.describe-enter" = "Добро пожаловать!";
+
+// MARK: MainUser
+"main-user.menu-title.auto-service" = "АвтоСервис";
+"main-user.menu-title.auto-washing" = "АвтоМойка";
+"main-user.menu-title.oil-change" = "ЗаменаМасла";
+
