BUS-7 add module Menu

--- a/BVCAutoservice/Resources/ru.lproj/Localizable.strings
+++ b/BVCAutoservice/Resources/ru.lproj/Localizable.strings
@@ -60,4 +60,12 @@
 "main-user.menu-title.auto-service" = "АвтоСервис";
 "main-user.menu-title.auto-washing" = "АвтоМойка";
 "main-user.menu-title.oil-change" = "ЗаменаМасла";
+"main-user.button-filter.title" = "Сортировка и фильтр";
 
+// MARK: Menu
+"menu-user.home" = "ГЛАВНАЯ";
+"menu-user.personal-area" = "ЛИЧНЫЙ КАБИНЕТ";
+"menu-user.notification" = "УВЕДОМЛЕНИЯ";
+"menu-user.configure" = "НАСТРОЙКИ";
+"menu-user.help" = "СЛУЖБА ЗАБОТЫ";
+"menu-user.applications" = "МОИ ЗАЯВКИ";
