--- a/BVCAutoservice/Resources/en.lproj/Localizable.strings
+++ b/BVCAutoservice/Resources/en.lproj/Localizable.strings
@@ -60,3 +60,12 @@
 "main-user.menu-title.auto-service" = "AutoService";
 "main-user.menu-title.auto-washing" = "AutoWashing";
 "main-user.menu-title.oil-change" = "OilChange";
+"main-user.button-filter.title" = "Sort and filter";
+
+// MARK: Menu
+"menu-user.home" = "HOME";
+"menu-user.personal-area" = "PERSONAL AREA";
+"menu-user.notification" = "NOTIFICATIONS";
+"menu-user.configure" = "CONFIGURE";
+"menu-user.help" = "HELP";
+"menu-user.applications" = "MY APPLICATIONS";
